--- a/1.ipynb
+++ b/1.ipynb
@@ -13,31 +13,7 @@
       },
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "   whoAmI robot human\n",
-              "0   human     0     1\n",
-              "1   human     0     1\n",
-              "2   robot     1     0\n",
-              "3   human     0     1\n",
-              "4   robot     1     0\n",
-              "5   human     0     1\n",
-              "6   human     0     1\n",
-              "7   robot     1     0\n",
-              "8   human     0     1\n",
-              "9   human     0     1\n",
-              "10  robot     1     0\n",
-              "11  robot     1     0\n",
-              "12  human     0     1\n",
-              "13  robot     1     0\n",
-              "14  human     0     1\n",
-              "15  robot     1     0\n",
-              "16  robot     1     0\n",
-              "17  robot     1     0\n",
-              "18  robot     1     0\n",
-              "19  human     0     1"
-            ],
             "text/html": [
               "\n",
               "  <div id=\"df-c1d3fd44-431c-4664-abf8-eae05a5a0001\" class=\"colab-df-container\">\n",
@@ -396,10 +372,34 @@
               "</div>\n",
               "    </div>\n",
               "  </div>\n"
+            ],
+            "text/plain": [
+              "   whoAmI robot human\n",
+              "0   human     0     1\n",
+              "1   human     0     1\n",
+              "2   robot     1     0\n",
+              "3   human     0     1\n",
+              "4   robot     1     0\n",
+              "5   human     0     1\n",
+              "6   human     0     1\n",
+              "7   robot     1     0\n",
+              "8   human     0     1\n",
+              "9   human     0     1\n",
+              "10  robot     1     0\n",
+              "11  robot     1     0\n",
+              "12  human     0     1\n",
+              "13  robot     1     0\n",
+              "14  human     0     1\n",
+              "15  robot     1     0\n",
+              "16  robot     1     0\n",
+              "17  robot     1     0\n",
+              "18  robot     1     0\n",
+              "19  human     0     1"
             ]
           },
+          "execution_count": 1,
           "metadata": {},
-          "execution_count": 1
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -412,7 +412,9 @@
         "data.loc[data['whoAmI'] == 'robot', 'robot' ] = '1'\n",
         "data.loc[data['whoAmI'] == 'human', 'human' ] = '1'\n",
         "data = data.fillna(0)\n",
-        "data.head(20)\n"
+        "data.head(20)\n",
+        "\n",
+        "# data = pd.DataFrame(random.sample(['black', 'white']*10, 20) ,columns={'Colors'})\n"
       ]
     }
   ],
