--- a/1.ipynb
+++ b/1.ipynb
@@ -414,7 +414,7 @@
         "data = data.fillna(0)\n",
         "data.head(20)\n",
         "\n",
-        "# data = pd.DataFrame(random.sample(['black', 'white']*10, 20) ,columns={'Colors'})\n"
+        "# data = pd.DataFrame(random.sample(['robot', 'human']*10, 10) ,columns={'Colors'})\n"
       ]
     }
   ],
